# CPP_Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
src/: aabb.h  bvh.h  camera.h  hittable.h  interactive.cpp  main.cpp  material.h  obj_loader.h  ray.h  scene.h  sphere.h  triangle.h  vec3.h
src/gpu/: gpu_preview.cpp
tools/: convert_ppm_to_png.py
